--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
   "rules": {
     "comma-dangle": 0,
     "consistent-return": 0,
-    "function-paren-newline": ["error", "never"],
+    "function-paren-newline": ["error", "multiline"],
     "implicit-arrow-linebreak": ["off"],
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
@@ -17,6 +17,7 @@
     "no-console": 0,
     "no-plusplus": 0,
     "no-unused-expressions": 0,
-    "chai-friendly/no-unused-expressions": 2
+    "chai-friendly/no-unused-expressions": 2,
+    "quotes": [2 , "double"]
   }
 }
