--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-import": "^2.13.0",
     "mocha": "^5.2.0",
     "nyc": "^13.0.0",
+    "prettier-eslint": "^8.8.2",
     "sinon": "^6.1.0",
     "sinon-mongoose": "^2.2.0",
     "supertest": "^3.1.0"
