--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "postinstall": "npm rebuild node-sass",
     "start": "node app.js",
     "test": "nyc mocha --timeout=3000 --exit",
-    "lint": "eslint **/*.js"
+    "lint": "eslint **/*.js",
+    "debug": "node $NODE_DEBUG_OPTION app.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.1.0",
